v1.1.0/modules/schema/pages/class/Minutes.adoc
= `Minutes`
:toclevels: 4


+++Time in minutes.+++


[cols="h,3",width=60%]
|===
| Type
| CIM data type class


| URI
| `cim:Minutes`


| CIM standard (perspective)
| IEC61970 (Grid)


|===

== Slots

[cols="1,1,2",width=100%]
|===
| Name | Type | Description

| `value`
| 0..1 +
https://w3id.org/linkml/Float[`float`]
//| +++None+++
| n/a

| `multiplier`
| 0..1 +
xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
//| +++None+++
| n/a

| `unit`
| 0..1 +
xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]
//| +++None+++
| n/a
|===

////

'''


//[discrete]
[#multiplier]
=== `multiplier`


[cols="h,1",width=60%]
|===
| URI
| `cim:Minutes.multiplier`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
|===

//[discrete]
[#unit]
=== `unit`


[cols="h,1",width=60%]
|===
| URI
| `cim:Minutes.unit`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]
|===

//[discrete]
[#value]
=== `value`


[cols="h,1",width=60%]
|===
| URI
| `cim:Minutes.value`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]
|===

////

== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/ComModule.adoc[`ComModule`] | xref::class/ComModule.adoc#timeZoneOffset[`timeZoneOffset`]



| xref::class/EndDevice.adoc[`EndDevice`] | xref::class/EndDevice.adoc#timeZoneOffset[`timeZoneOffset`]



| xref::class/EndDeviceAction.adoc[`EndDeviceAction`] | xref::class/EndDeviceAction.adoc#duration[`duration`]



| xref::class/EndDeviceTiming.adoc[`EndDeviceTiming`] | xref::class/EndDeviceTiming.adoc#duration[`duration`]



| xref::class/EnvironmentalMonitoringStation.adoc[`EnvironmentalMonitoringStation`] | xref::class/EnvironmentalMonitoringStation.adoc#timeZoneOffset[`timeZoneOffset`]


|===

